# stochastic_competition_git

./: .gitignore  .gitmodules  LICENSE  README.md  landscape1D512_10.csv  measure1D.cpp  phylo129-3.txt  phylogeny.jl  range_git.jl  sim_git.jl  width_git.jl
ABM/: sim.nlogo
NetLogo/: plot_csv_data.py  run_nlogo_hydro.sh  sim.nlogo
c_code/: CMakeLists.txt  Makefile  README.md  SimGrid.cpp  bcl_sim.cpp  benchmark.cpp  cpp128_test.txt  diff2D.cpp  ga_sim.cpp  ga_sim1D_hydro.cpp  heatmap.py  julia128_test.txt  load_log.h  matrix_basic.cpp  measure.cpp  mpi_sim.cpp  omp_sim.cpp  petsc_sim.c  reformat_ga_matrix.py  run_benchmark.sh  run_ga_1D_delta.sh  run_ga_1D_hydro.sh  run_ga_cc.sh  run_ga_delta.sh  run_ga_hydro.sh  run_ga_no_tree_hydro.sh  run_mpi_cc.sh  run_mpi_delta.sh  run_mpi_ga_cc.sh  run_omp.sh  run_omp_hydro.sh  run_sim.sh  run_simple.sh  run_tree_sim.sh  run_wrap.sh  sim.cpp  sim_1d.cpp  simple_sim.cpp  slope.h  test_tree.cpp  (+8 more)
c_code/agner_random/: CMakeLists.txt  rancombi.cpp
c_code/include/: load_log.cpp  tree.h  tree_test.cpp  tree_test.h
c_code/sims/: ga_sim.cpp  ga_sim1D.cpp  ga_sim1D_hydro.cpp  ga_sim_no_tree.cpp  sim.cpp  sim_with_args.cpp  tree_sim.cpp
c_code/stats/: diff2D.h  species_count.h  width1D.cpp  width1D.h  width2D.cpp  width2D.h
c_tests/: CMakeLists.txt  run_hydro.sh  sim.cpp
c_tests/agner_random/: stoc1.cpp
julia/: run_julia_sim.sh  sim.jl
julia_code/: elizabeth_sim_test.jl  ensemble_test.jl  measure_git.jl  notes_CC.md  run_julia_sim.sh  sim_boundary_git.jl  sim_git.jl
mesa/: model.py  run.py  run_mesa.sh
numba/: sim.py
python/: run.sh  sim.py
repast4py/: sim.py
